--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ title: About
 header-img: "img/about-bg.png"
 ---
 
-<p></p>
+<p>My name is Candice Parker. I am a student at the Flatiron School, studying to be a software engineer. I worked formerly as a radiographer, now I am a medical massage therapist. I have my own practice , as well as working at a local chiropractic clinic. </p>
